--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -20,9 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:single-file": "yarn build && yarn package",
-    "package": "webpack --config webpack.config.js"
+    "eject": "react-scripts eject"    
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +37,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "webpack-cli": "^4.6.0",
-	"uglifyjs-webpack-plugin": "^2.2.0"
+	"uglifyjs-webpack-plugin": "^2.2.0",
+	"@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10"    
   }
 }
