--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",    
+    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"    
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -37,11 +39,11 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "webpack-cli": "^4.6.0",
-	"uglifyjs-webpack-plugin": "^2.2.0",
-	"@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10"    
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack-cli": "^4.6.0"
   }
 }
